--- a/DeckSorterWebApp/Dockerfile
+++ b/DeckSorterWebApp/Dockerfile
@@ -1,10 +1,13 @@
 # stage 1
-FROM node:latest as node
+
+FROM node:lts-alpine AS deck-sorter-build
 WORKDIR /app
 COPY . .
-RUN npm install
-RUN npm run build --prod
+RUN npm install -g npm@8.1.3
+RUN npm ci && npm run build
 
 # stage 2
+
 FROM nginx:alpine
-COPY --from=node /app/dist/angular-app /usr/share/nginx/html
+COPY --from=deck-sorter-build /app/dist/DeckSorterWebApp /usr/share/nginx/html
+EXPOSE 80
